// Copyright 2023-2025 The Connect Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package example.calculator.v1;

import "buf/validate/validate.proto";

message CumSumRequest {
  int64 number = 1 [(buf.validate.field).int64.gt = 0];
}

message CumSumResponse {
  int64 sum = 1;
}

service CalculatorService {
  rpc CumSum(stream CumSumRequest) returns (stream CumSumResponse) {}
}
